WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
VERIFIED FIXED
14341
rules="none" ignored in certain cases
https://bugs.webkit.org/show_bug.cgi?id=14341
Summary
rules="none" ignored in certain cases
Gérard Talbot (no longer involved)
Reported
2007-06-23 13:28:39 PDT
Steps to reproduce: Load provided URL Actual results in Safari 3.0.2 build 522.13.1: all 4 tables have, display a border between the 1st cell and the 2nd cell Expected results: all 4 tables should have, should display no border between the 1st cell and the 2nd cell I searched for a duplicate and did not find one. MSIE 7 and Firefox 2.0.0.4 get expected results.
Attachments
Respect rules="none"
(120.10 KB, patch)
2007-06-23 14:53 PDT
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-06-23 14:53:59 PDT
Created
attachment 15202
[details]
Respect rules="none" tables/mozilla_expected_failures/core/table_rules.html remains failing due to incorrect handling of colgroups with <col> children (different from
bug 13793
).
Maciej Stachowiak
Comment 2
2007-06-24 18:31:04 PDT
Comment on
attachment 15202
[details]
Respect rules="none" r=me
Mark Rowe (bdash)
Comment 3
2007-06-25 03:24:17 PDT
Landed in
r23759
.
mitz
Comment 4
2007-06-26 01:28:17 PDT
(In reply to
comment #1
)
> Created an attachment (id=15202) [edit] > tables/mozilla_expected_failures/core/table_rules.html remains failing due to > incorrect handling of colgroups with <col> children (different from
bug 13793
).
Bug 14406
.
Gérard Talbot (no longer involved)
Comment 5
2007-08-03 23:07:19 PDT
Hello Mark, (Mitz?) and Maciej, I tried the testcase with Safari 3.0.3 build 522.15.5 and I still get the actual results, not the expected results. Was the bug fixed? Just asking..
mitz
Comment 6
2007-08-04 01:00:57 PDT
(In reply to
comment #5
)
> Hello Mark, (Mitz?) and Maciej, > > I tried the testcase with Safari 3.0.3 build 522.15.5 and I still get the > actual results, not the expected results. Was the bug fixed? Just asking..
The bug is fixed in the latest nightly builds, but not in Safari 3 betas. You can download a nightly build from <
http://nightly.webkit.org
> and verify.
Gérard Talbot (no longer involved)
Comment 7
2008-03-21 09:15:45 PDT
Fixed in Safari 3.1 build 525.13.0 Marking as VERIFIED
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug